@@ -184,10 +184,10 @@ if ($disable_alert) {
 }
 
 if ($id_agente) {
-	echo '<h1>'.__('Agent configuration').' &raquo; '.__('Alerts').'</h1>';
+	echo '<h2>'.__('Agent configuration').' &raquo; '.__('Alerts').'</h2>';
 	$agents = array ($id_agente => get_agent_name ($id_agente));
 } else {
-	echo '<h1>'.__('Alerts').'</h1>';
+	echo '<h2>'.__('Alerts').'</h2>';
 	$groups = get_user_groups ();
 	$agents = get_group_agents (array_keys ($groups), false, "none");
 }
